# thun-format-deckbuilder

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: allowed_sets.json  archetypes.json  card_tags.json  thun.toml  thun_rules.json
docs/: ARCHITECTURE.md  DECK_ENGINE_V02.md  MIGRATION.md
scripts/: build_index.py  create_format_schema.py  download_scryfall.py  enhance_database.py  export_project.sh  rebuild_database.sh  run_tests.sh  setup_dev.sh  test_card_database.py  update_sets.py
src/thun_deckbuilder/: burn_strategy.py  card_analyzer.py  card_database.py  card_knowledge.py  card_roles.py  card_scoring.py  card_synergies.py  cli.py  composition_engine.py  config.py  database.py  deck_builder.py  deck_generator.py  deck_profile.py  deck_request.py  deck_skeleton.py  deck_strategy.py  deck_validation.py  knowledge_base.py  legality.py  paths.py  prototype.py  roles.py  token_generator.py  token_scoring.py  token_strategy.py
tests/: conftest.py  test_burn_strategy.py  test_card_analyzer.py  test_card_knowledge.py  test_card_roles.py  test_card_scoring.py  test_card_synergies.py  test_database.py  test_deck_builder.py  test_deck_explanations.py  test_deck_generator.py  test_deck_profiles.py  test_deck_skeleton.py  test_deck_validation.py  test_integration.py  test_knowledge_base.py  test_legality.py  test_prototype.py  test_token_strategy.py
