[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thun-deckbuilder"
version = "0.1.0"
description = "Deckbuilding and legality engine for the Magic Club Thun format"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.3,<4",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-ra",
]